--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,11 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: "Config Bazel"
+          command: "sudo apt-get install npm && npm install -g @bazel/bazelisk"
+      - run:
+          name: "Build"
+          command: "cd ~/vt && bazel build //common/..."
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
