--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ executors:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build-job:
+  build-and-test:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     executor: main
@@ -26,11 +26,14 @@ jobs:
       - checkout
       - run:
           name: "Build"
-          command: "bazel build //common/..."
+          command: "bazel build ..."
+      - run:
+          name: "Test"
+          command: "bazel test ..."
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  main-workflow:
     jobs:
-      - build-job
+      - build-and-test
