--- a/infector/BUILD
+++ b/infector/BUILD
@@ -4,6 +4,7 @@ cc_binary(
     name = "silvio",
     srcs = ["silvio.cc"],
     deps = [
+        "//common:hex_dump",
     ],
 )
 
@@ -19,4 +20,19 @@ cc_binary(
     srcs = ["cavy.cc"],
     deps = [
     ],
+)
+
+genrule(
+    name = "parasite_to_bin",
+    srcs = [
+        "so_parasite.asm",
+    ],
+    outs = ["so_parasite.bin"],
+    cmd_bash = "nasm -f bin $< -o $@",
+)
+
+sh_binary(
+    name = "infect",
+    srcs = ["infect.sh"],
+    data = [":silvio", ":cavy", ":so_parasite.bin"],
 )
