support aarch64 and k8 toolchains

--- a/.bazelrc
+++ b/.bazelrc
@@ -1,1 +1,9 @@
 build --cxxopt='-std=c++2a' --copt='-fconcepts'
+
+build:gcc_k8 --crosstool_top=//toolchain:gcc_k8
+build:gcc_k8 --cpu=k8
+build:gcc_k8 --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+
+build:gcc_aarch64 --crosstool_top=//toolchain:gcc_aarch64
+build:gcc_aarch64 --cpu=aarch64
+build:gcc_aarch64 --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
