--- a/.bazelrc
+++ b/.bazelrc
@@ -1,8 +1,8 @@
 build --cxxopt='-std=c++2a' --copt='-fconcepts'
 
-build:gcc_k8 --crosstool_top=//toolchain:gcc_k8
-build:gcc_k8 --cpu=k8
-build:gcc_k8 --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
+build:gcc_x86_64 --crosstool_top=//toolchain:gcc_x86_64
+build:gcc_x86_64 --cpu=x86_64
+build:gcc_x86_64 --host_crosstool_top=@bazel_tools//tools/cpp:toolchain
 
 build:gcc_aarch64 --crosstool_top=//toolchain:gcc_aarch64
 build:gcc_aarch64 --cpu=aarch64
