--- a/common/BUILD
+++ b/common/BUILD
@@ -2,16 +2,6 @@ load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 
 package(default_visibility = ["//visibility:public"])
 
-config_setting(
-    name = "aarch64_cpu",
-    values = {"cpu": "aarch64"},
-)
-
-config_setting(
-    name = "k8_cpu",
-    values = {"cpu": "k8"},
-)
-
 cc_library(
     name = "mmap",
     hdrs = ["mmap.hh"],
@@ -25,6 +15,7 @@ cc_library(
     name = "file_descriptor",
     hdrs = ["file_descriptor.hh"],
     deps = [
+        "//arch:syscall",
         ":macros",
         "@glog",
     ],
@@ -41,6 +32,14 @@ cc_library(
     hdrs = ["environment_variables.hh"],
     deps = [
         "@glog",
+    ],
+)
+
+cc_binary(
+    name = "file_descriptor_b",
+    srcs = ["file_descriptor_b.cc"],
+    deps = [
+        ":file_descriptor",
     ],
 )
 
@@ -79,4 +78,3 @@ cc_library(
     name = "patch_pattern",
     hdrs = ["patch_pattern.hh"],
 )
-
