--- a/testing/BUILD
+++ b/testing/BUILD
@@ -3,16 +3,6 @@ load("@rules_cc//cc:defs.bzl", "cc_library")
 package(default_visibility = ["//visibility:public"])
 
 cc_library(
-    name = "test_support",
-    srcs = ["test_support.cc"],
-    hdrs = ["test_support.hh"],
-    deps = [
-        "//common:environment_variables",
-        "@glog",
-    ],
-)
-
-cc_library(
     name = "test",
     srcs = ["test.cc"],
     hdrs = ["test.hh"],
@@ -22,4 +12,9 @@ cc_library(
         "//std:time",
         "//std:stdlib",
     ],
+)
+
+py_binary(
+    name = "generate_main",
+    srcs = ["generate_main.py"],
 )
