--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,13 +27,13 @@ jobs:
       - run: ./dev_setup.sh
       - run:
           name: "Build x86_64"
-          command: "bazel build //common/... --confg=gcc_x86_64 && bazel build //std/... --confg=gcc_x86_64"
+          command: "bazel build //common/... --config=gcc_x86_64 && bazel build //std/... --config=gcc_x86_64"
       - run:
           name: "Build aarch64"
-          command: "bazel build //common/... --confg=gcc_aarch64 && bazel build //std/... --confg=gcc_aarch64"
+          command: "bazel build //common/... --config=gcc_aarch64 && bazel build //std/... --config=gcc_aarch64"
       - run:
           name: "Test"
-          command: "bazel test //common/... --confg=gcc_x86_64"
+          command: "bazel test //common/... --config=gcc_x86_64"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
