add custom linker script support

--- a/common/BUILD
+++ b/common/BUILD
@@ -3,6 +3,18 @@ load("//testing:test.bzl", "nostdlib_cc_test")
 
 package(default_visibility = ["//visibility:public"])
 
+config_setting(
+    name = "aarch64_cpu",
+    values = {"cpu": "aarch64"},
+)
+
+config_setting(
+    name = "x86_cpu",
+    values = {
+        "cpu": "x86_64",
+    },
+)
+
 cc_library(
     name = "mmap",
     hdrs = ["mmap.hh"],
@@ -19,8 +31,8 @@ cc_library(
     hdrs = ["file_descriptor.hh"],
     deps = [
         ":macros",
-        "//std:sys",
         "//std:stdio",
+        "//std:sys",
         "//std:utility",
     ],
 )
@@ -88,4 +100,15 @@ cc_library(
     name = "patch_pattern",
     hdrs = ["patch_pattern.hh"],
     deps = ["//std:types"],
+)
+
+filegroup(
+    name = "parasite_linker",
+    srcs = select(
+        {
+            ":aarch64_cpu": ["parasite_linker_aarch64.lds"],
+            ":x86_cpu": ["parasite_linker_x86_64.lds"],
+        },
+    ),
+    visibility = ["//visibility:public"],
 )
