setup infra for reverse text infection

--- a/infector/BUILD
+++ b/infector/BUILD
@@ -1,11 +1,12 @@
 load("//common:parasite.bzl", "cc_nolibc_binary", "cc_parasite_binary")
 
 cc_nolibc_binary(
-    name = "padding_infector",
-    srcs = ["padding_infector.cc"],
+    name = "infector",
+    srcs = ["infector.cc"],
     deps = [
-        ":padding_infect",
         ":common",
+        ":padding_infect",
+        ":reverse_text_infect",
         "//std:stdio",
     ],
 )
@@ -24,11 +25,24 @@ cc_library(
 )
 
 cc_library(
+    name = "reverse_text_infect",
+    srcs = ["reverse_text_infect.cc"],
+    hdrs = ["reverse_text_infect.hh"],
+    deps = [
+        "//common:file_descriptor",
+        "//common:mmap",
+        "//common:patch_pattern",
+        "//common:patch_relinguish_control",
+        "//std:string",
+    ],
+)
+
+cc_library(
     name = "common",
     hdrs = ["common.hh"],
     deps = [
-        "//common:mmap",
         "//common:file_descriptor",
+        "//common:mmap",
         "//std:string",
     ],
 )
@@ -56,7 +70,17 @@ sh_test(
     srcs = ["padding_infector_test.sh"],
     data = [
         ":cavy",
-        ":padding_infector",
+        ":infector",
+        ":test_parasite",
+    ],
+)
+
+sh_test(
+    name = "reverse_text_infector_test",
+    srcs = ["reverse_text_infector_test.sh"],
+    data = [
+        ":cavy",
+        ":infector",
         ":test_parasite",
     ],
 )
